added more tests and docker compose